Login lupa password udah, kurang responsive button lupa password

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -437,7 +437,7 @@ $input-padding-x-lg: $input-btn-padding-x-lg !default;
 $input-font-size-lg: $input-btn-font-size-lg !default;
 $input-line-height-lg: $input-btn-line-height-lg !default;
 
-$input-bg: $white !default;
+$input-bg: #F5F6F8 !default;
 $input-disabled-bg: $gray-200 !default;
 
 $input-color: $gray-700 !default;
