--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -16,10 +16,11 @@
   color: $input-color;
   background-color: $input-bg;
   background-clip: padding-box;
-  border: $input-border-width solid $input-border-color;
+  border: none;
+  // border-radius: "3px";
 
   // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
-  @include border-radius($input-border-radius, 0);
+  @include border-radius(4px, 0);
 
   @include box-shadow($input-box-shadow);
   @include transition($input-transition);
