--- a/src/assets/scss/utilities/_shadows.scss
+++ b/src/assets/scss/utilities/_shadows.scss
@@ -3,4 +3,8 @@
 .shadow-sm { box-shadow: $box-shadow-sm !important; }
 .shadow { box-shadow: $box-shadow !important; }
 .shadow-lg { box-shadow: $box-shadow-lg !important; }
+.shadow-md {
+    filter: drop-shadow(0px 2px 5px rgba(0, 0, 0, 0.205));;
+}
 .shadow-none { box-shadow: none !important; }
+
