all course + Spesialisasi selesai

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -321,3 +321,9 @@ main {
   padding: 1px 155px;
   box-shadow: 0px 8px 15px rgba(50, 82, 223, 0.3);
 }
+.btn-custom-load {
+  background-color: #E5E5E5;
+  border-radius: 15px;
+  padding: 5px 50px;
+  font-weight: 500;
+}
