--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -360,3 +360,7 @@ main {
 .collapsible-link[aria-expanded='true']::before {
   transform: rotate(180deg);
 }
+
+.cursor-no-drop {
+  cursor: no-drop;
+}
