slicing design bar dan materi page

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -364,3 +364,13 @@ main {
 .cursor-no-drop {
   cursor: no-drop;
 }
+.text-primary-blue-tua {
+  color: #152C5B
+}
+.h-screen {
+  height: 100vh;
+  overflow: scroll;
+}
+.fs-5 {
+  font-size: 30px;
+}
