--- a/src/assets/scss/_progress.scss
+++ b/src/assets/scss/_progress.scss
@@ -8,7 +8,7 @@
 
 .progress {
   display: flex;
-  height: $progress-height;
+  height: 10px;
   overflow: hidden; // force rounded corners by cropping it
   @include font-size($progress-font-size);
   background-color: $progress-bg;
