--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -374,3 +374,17 @@ main {
 .fs-5 {
   font-size: 30px;
 }
+.wrapper-sidebar {
+  display: flex;
+}
+.player-wrapper {
+  position: relative;
+  padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
+  padding-bottom: 0;
+}
+
+.react-player {
+  position: absolute;
+  top: 0%;
+  left: 15%;
+}
